--- a/assets/css/src/style.scss
+++ b/assets/css/src/style.scss
@@ -1,8 +1,38 @@
+* {
+  padding: 0;
+  margin: 0;
+}
+
+body {
+  width: 600px;
+
+  &[data-dialog-open] {
+    //overflow: hidden;
+  }
+}
+
+p {
+  margin-bottom: .5rem;
+}
+
 dialog {
-  background: red;
+  background: #fff;
   border: none;
+  padding: 0;
+  margin: auto;
 }
 
 dialog::backdrop {
   background-color:rgba(0,0,0,0.7);
+}
+
+
+dialog {
+  font-family: Arial, Helvetica, sans-serif;
+  border-radius: .2rem;
+  line-height: 1.3;
+
+  .dialog-wrap {
+    padding: 1rem;
+  }
 }
